@@ -131,6 +131,7 @@ COM_ADMIN_USER_FIELD_HELPSITE_LABEL="Help Site"
 COM_ADMIN_USER_FIELD_LASTVISIT_DESC="Last Visit Date"
 COM_ADMIN_USER_FIELD_LASTVISIT_LABEL="Last Visit Date"
 COM_ADMIN_USER_FIELD_NAME_DESC="Enter the name of the user"
+COM_ADMIN_USER_FIELD_NOCHANGE_USERNAME_DESC="If you want to change your Login Name, please contact a site administrator"
 COM_ADMIN_USER_FIELD_PASSWORD2_DESC="Confirm the user's password"
 COM_ADMIN_USER_FIELD_PASSWORD2_LABEL="Confirm Password"
 COM_ADMIN_USER_FIELD_PASSWORD_DESC="Enter the password for the user"
