@@ -25,7 +25,6 @@
 			required="true"
 			size="30"
 			validate="username"
-			readonly="true"
 		/>
 
 		<field name="password1" type="password"
