@@ -36,7 +36,7 @@ $lang->load( 'plg_user_profile', JPATH_ADMINISTRATOR );
 			<?php else:?>
 				<dt>
 					<?php echo $field->label; ?>
-					<?php if (!$field->required && $field->type!='Spacer'): ?>
+					<?php if (!$field->required && $field->type!='Spacer' && $field->name!='jform[username]'): ?>
 					<span class="optional"><?php echo JText::_('COM_USERS_OPTIONAL'); ?></span>
 					<?php endif; ?>
 				</dt>
