@@ -63,6 +63,7 @@ COM_USERS_PROFILE_NAME_DESC="Enter your full name"
 COM_USERS_PROFILE_NAME_LABEL="Name:"
 COM_USERS_PROFILE_NAME_MESSAGE="The name you entered was not valid."
 COM_USERS_PROFILE_NEVER_VISITED="This is the first time you visit this site"
+COM_USERS_PROFILE_NOCHANGE_USERNAME_DESC="If you want to change your username, please contact a site administrator"
 COM_USERS_PROFILE_PASSWORD1_LABEL="Password:"
 COM_USERS_PROFILE_PASSWORD1_MESSAGE="The passwords you entered do not match. Please enter your desired password in the password field and confirm your entry by entering it in the confirm password field."
 COM_USERS_PROFILE_PASSWORD2_DESC="Confirm your password"
