@@ -26,8 +26,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
-03-Jun-2012 Mark Dexter
+04-Jun-2012 Jean-Marie Simonet
+ + [#28067] Option to disable the ability to change the Username in Profile
 
+03-Jun-2012 Mark Dexter
  ^ [#28450] Set the CSS class for JForm field label. Thanks Viet Vu.
 
 03-Jun-2012 Jean-Marie Simonet
